examples/test/testpolicy3034.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3034
  namespace: namespace5
spec:
  podSelector:
    matchLabels:
      key46: value4
      key45: value45
      key36: value13
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key46: value44
          key30: value1
      podSelector:
        matchLabels:
          key3: value40
          key25: value48
